--- a/materiolze.css
+++ b/materiolze.css
@@ -1,33 +1,8 @@
 /* INDEX OF CSS STYLES*/
 
-/*CARDS*/
-.card-content{
-    margin: 15px;
-    padding: 5px;
-}
-
-.card-outline{
-    width: 322px;
-    height: 203px;
-    left: 450.5px;
-    top: 67.5px;
-    background: #FFFFFF;
-    border: 1px solid #929292;
-    box-sizing: border-box;
-    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
-    border-radius: 6px;
-}
-
-.card {
-    width: 322px;
-    height: 203px;
-    left: 450.5px;
-    top: 67.5px;
-    background: #FFFFFF;
-    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
-    border-radius: 6px;
-}
-
+/**********  
+    CSS
+***********/
 
 /*BORDRS*/
 .b-radius0px{
@@ -58,6 +33,79 @@
     border-radius: 20px;
 }
 
+/*Padding*/
+.padtop-1em{
+    padding-top: 1em;
+}
+.padtop-2em{
+    padding-top: 2em;
+}
+.padtop-3em{
+    padding-top: 3em;
+}
+.padtop-4em{
+    padding-top: 4em;
+}
+.padtop-5em{
+    padding-top: 5em;
+}
+.padtop-6em{
+    padding-top: 5em;
+}
+.padtop-7em{
+    padding-top: 5em;
+}
+.padtop-8em{
+    padding-top: 5em;
+}
+.padtop-9em{
+    padding-top: 5em;
+}
+
+
+/* Floats*/
+
+.f-right{
+    float: right !important;
+}
+
+.f-left{
+    float: left !important;
+}
+
+
+
+
+/**********  
+Components
+***********/
+/*CARDS*/
+.card-content{
+    margin: 15px;
+    padding: 5px;
+}
+
+.card-outline{
+    width: 322px;
+    height: 203px;
+    left: 450.5px;
+    top: 67.5px;
+    background: #FFFFFF;
+    border: 1px solid #929292;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 6px;
+}
+
+.card {
+    width: 322px;
+    height: 203px;
+    left: 450.5px;
+    top: 67.5px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 6px;
+}
 
 
 /* BUTTONS */
@@ -86,9 +134,6 @@
 
 
 /*NavBars*/
-.right {
-    float: right !important;
-}
 ul:not(.browser-default)>li {
     list-style-type: none;
 }
