--- a/macherioo.css
+++ b/macherioo.css
@@ -1,5 +1,59 @@
 /* INDEX OF CSS STYLES*/
 
+
+
+/**********  
+    Font-styles
+***********/
+
+/*Text aligns*/
+.text-center{
+    text-align: center;
+}
+
+.text-justify{
+    text-align: justify;
+}
+
+h1 {
+    font-size: 8.0vh;
+    line-height: 110%;
+    margin: 2.8rem 0 1.68rem 0;
+}
+
+h2{
+    font-size: 7.0vh;
+    line-height: 110%;
+    margin: 2.8rem 0 1.68rem 0;
+}
+
+h3{
+    font-size: 6.0vh;
+    line-height: 110%;
+    margin: 2.8rem 0 1.68rem 0;
+}
+
+h4{
+    font-size: 5.0vh;
+    line-height: 110%;
+    margin: 2.8rem 0 1.68rem 0;
+}
+
+h5{
+    font-size: 4.5vh;
+    line-height: 110%;
+    margin: 2.8rem 0 1.68rem 0;
+}
+
+h6{
+    font-size: 4.0vh;
+    line-height: 110%;
+    margin: 2.8rem 0 1.68rem 0;
+}
+
+p {
+    font-size: 1.1rem;
+}
 /**********  
     CSS
 ***********/
