added list with no styles

--- a/macherioo.css
+++ b/macherioo.css
@@ -15,6 +15,7 @@
     text-align: justify;
 }
 
+
 h1 {
     font-size: 8.0vh;
     line-height: 110%;
@@ -54,6 +55,12 @@ h6{
 p {
     font-size: 1.1rem;
 }
+
+li {
+    line-height: 150%;
+    text-decoration: none;
+}
+
 /**********  
     CSS
 ***********/
