--- a/macherioo.css
+++ b/macherioo.css
@@ -107,8 +107,11 @@
 
 
 /*NavBars*/
-.right {
+.f-right {
     float: right !important;
+}
+.f-left {
+    float: left !important;
 }
 ul:not(.browser-default)>li {
     list-style-type: none;
@@ -140,7 +143,7 @@ nav ul a {
     -webkit-transition: background-color .3s;
     transition: background-color .3s;
     font-size: 1rem;
-    color: rgb(31, 31, 31);
+    color: rgb(223, 223, 223);
     display: block;
     padding: 0 15px;
     cursor: pointer;
