added badge with notifications

--- a/macherioo.css
+++ b/macherioo.css
@@ -50,6 +50,22 @@
     border-radius: 6px;
 }
 
+.badge-input{
+    color: #ffffff;
+    background-color: #484848;
+    bottom: 15px;
+    position: relative;
+    border-radius: 50%;
+    text-align: center;
+    display: inline-block;
+    left: 5px;
+    vertical-align: middle;
+    font-size: 15px;
+    height: 20px;
+    width: 20px;
+}
+
+
 /*BORDRS*/
 .b-radius0px{
     border-radius: 0px;
